Updated version number

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "frodeborli/fubberframework",
+    "version": "1.0.0-dev",
     "description": "Fubber Framework by Ennerd.com",
     "license": "MIT",
     "authors": [
