Renaming framework to ennerd/fubber-framework

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "frodeborli/fubberframework",
+    "name": "ennerd/fubber-framework",
     "version": "1.0.0-dev",
     "description": "Fubber Framework by Ennerd.com",
     "license": "MIT",
